# ai-model-training

./: Dockerfile  pyproject.toml
.github/workflows/: build-deploy-model-train.yaml
src/: main.py  requirements.txt
