[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dataset-trainer"
version = "0.1.0"
description = "Dataset processing and GPT-2 model training using MinIO storage"
authors = [
    {name="julien", email="julsim13@yahoo.fr"}
]
requires-python = ">=3.10"

[project.dependencies]
boto3 = ">=1.26.0"
botocore = ">=1.29.0"
transformers = ">=4.40.0"
datasets = ">=2.14.0"
torch = ">=2.1.0"
PyPDF2 = ">=3.0.1"
ebooklib = ">=0.18"
python-dotenv = ">=1.0.0"

[tool.setuptools.packages.find]
where = ["src"]